--- a/src/Components/LikeDislike.css
+++ b/src/Components/LikeDislike.css
@@ -4,10 +4,13 @@
     color:white;
     display: flex;
     justify-content: space-around;
-    width: 60%;
-    height: 15px;
-    padding: 10px 20px;
+    width: fit-content;
+    height: fit-content;
     border-radius: 20px;
+    padding-left: 8px;
+    padding-right: 8px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     align-items: center;
   }
   
